[B] Add get army for town
