# src/apps/CryptoWars/backend/Controllers/Armies/ArmyResponse.ts
@@ -1,0 +1,5 @@
+import { ArmyPrimitives } from '../../../../../Contexts/Battlefield/Armies/Domain/Army';
+
+export type ArmyResponse = {
+  army: ArmyPrimitives;
+};
